asio_tcp example improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ add_definitions(-std=c++1z)
 add_definitions(-ftemplate-backtrace-limit=0)
 add_definitions(-Wall)
 add_definitions(-Wextra)
-add_definitions(-DBOOST_ASIO_NO_TYPEID -DBOOST_ASIO_HAS_STD_STRING_VIEW)
+add_definitions(-DASIO_STANDALONE -DBOOST_ASIO_NO_TYPEID -DBOOST_ASIO_HAS_STD_STRING_VIEW)
+add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 
 include_directories(${cppnow2018_full_duplex_project_SOURCE_DIR}/include)
 
-add_subdirectory(example)
-#add_subdirectory(test)
+find_package(Threads)
+add_subdirectory(example/asio_tcp)
+#add_subdirectory(example/beast_ws)
