--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -1,4 +1,5 @@
-FROM full_duplex_build:linux_x64
+#FROM cppnow18_full_duplex_build:linux_x64
+FROM cppnow18_full_duplex_platform
 
   ARG BUILD_TYPE=Debug
   ENV BUILD_TYPE ${BUILD_TYPE}
